syntax = "proto3";

package ConfigProto;

option go_package = "github.com/bytelang/kplayer/types/config";

import "gogoproto/gogo.proto";

message Output {
	repeated OutputInstance lists = 1 [(gogoproto.nullable) = true];
}

message OutputInstance {
	string path = 1;
	string unique = 2;
}
