syntax = "proto3";

package ModuleProto;

option go_package = "github.com/bytelang/kplayer/types/module";

import "gogoproto/gogo.proto";

// res
message Output {
	string path = 1;
	string unique = 2;
	uint64 create_time = 3;
	uint64 end_time = 4;
	uint64 start_time = 5;
	bool connected = 6;
}